# dbsprout

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dbsprout.toml  mkdocs.yml  pyproject.toml  release-please-config.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  post-create.sh  sync-plugins.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml  train-integration.yml
benchmarks/: README.md  __init__.py  bench_cli.py  bench_generation.py  bench_output.py  conftest.py
dbsprout/: __init__.py  __main__.py  errors.py
dbsprout/_vendor/geo/: us_cities.json
dbsprout/cli/: __init__.py  _utils.py  app.py  console.py  error_handler.py  sources.py
dbsprout/cli/commands/: audit.py  diff.py  doctor.py  generate.py  init.py  models.py  plugins.py  report.py  train.py  validate.py
dbsprout/config/: __init__.py  loader.py  models.py
dbsprout/doctor/: __init__.py  checks.py
dbsprout/generate/: __init__.py  check_parser.py  constraints.py  deterministic.py  fk_sampling.py  geo.py  orchestrator.py  vectorized.py
dbsprout/generate/engines/: __init__.py  heuristic.py  spec_driven.py  statistical.py
dbsprout/migrate/: __init__.py  differ.py  models.py  snapshot.py  update_models.py  updater.py
dbsprout/migrate/parsers/: __init__.py  _django_handlers.py  _sql_walker.py  alembic.py  django.py  flyway.py  liquibase.py  prisma.py
dbsprout/models/: __init__.py  manager.py  registry.json  types.py
dbsprout/output/: csv_writer.py  json_writer.py  models.py  mysql_load_data.py  parquet_writer.py  pg_copy.py  sa_batch.py  sql_writer.py
dbsprout/plugins/: __init__.py  adapters.py  discovery.py  dispatch.py  errors.py  protocols.py  registry.py
dbsprout/privacy/: __init__.py  audit.py  enforcer.py  pii.py  redactor.py
dbsprout/quality/: _types.py  detection.py  fidelity.py  integrity.py  report.py
dbsprout/report/: __init__.py  charts.py  context.py  env.py  erd.py  generator.py  preview.py  quality_table.py
dbsprout/report/templates/: report.html.j2
dbsprout/report/templates/partials/: _charts.html.j2  _data_preview.html.j2  _erd.html.j2  _quality_table.html.j2  scripts.js.j2  styles.css.j2
dbsprout/schema/: __init__.py  dialect.py  graph.py  introspect.py  models.py
dbsprout/schema/parsers/: __init__.py  dbml.py  ddl.py  django.py  mermaid.py  mongodb.py  plantuml.py  prisma.py
dbsprout/spec/: __init__.py  analyzer.py  cache.py  grammar.py  heuristics.py  models.py  patterns.py
dbsprout/spec/providers/: base.py  cloud.py  embedded.py  ollama.py
dbsprout/state/: __init__.py  db.py  models.py  writer.py
dbsprout/train/: __init__.py  allocator.py  closure.py  config.py  exporter.py  extractor.py  loader.py  manifest.py  mlx_trainer.py  models.py  privacy.py  random_select.py  serializer.py  trainer.py
examples/plugin-yaml-parser/: README.md  pyproject.toml
examples/plugin-yaml-parser/dbsprout_plugin_yaml/: __init__.py  parser.py
examples/plugin-yaml-parser/tests/: test_parser.py
site_docs/: contributing.md  index.md
site_docs/architecture/: overview.md
site_docs/contributing/: plugins.md
site_docs/getting-started/: install.md  quick-start.md
site_docs/user-guide/: cli.md  configuration.md
tests/: conftest.py
tests/e2e/: _pipeline.py  test_cms.py  test_ecommerce.py  test_financial.py  test_harness_smoke.py  test_saas.py  test_social.py
tests/fixtures/schemas/: _harness.sql  cms.sql  ecommerce.sql  financial.sql  saas.sql  social.sql
tests/integration/: conftest.py  test_incremental_workflow.py  test_mysql_load_data_live.py  test_pg_copy_live.py  test_report_e2e.py
tests/integration/test_plugins/: test_example_yaml_plugin.py
tests/integration/test_train/: conftest.py  test_cli_extract.py  test_cli_serialize.py  test_exporter_toolchain.py  test_extract_mysql.py  test_extract_postgres.py  test_extract_sqlite.py  test_serialize.py
tests/test_cli/: test_models.py
tests/unit/: conftest.py  test_check_parser.py  test_cli.py  test_cli_audit.py  test_cli_diff.py  test_cli_doctor.py  test_cli_envvar.py  test_cli_error_handler.py  test_cli_generate.py  test_cli_generate_incremental.py  test_cli_generate_statistical.py  test_cli_init.py  test_cli_report.py  test_cli_sources.py  test_cli_validate.py  test_config.py  test_config_lazy_import.py  test_constraints.py  test_csv_writer.py  test_detection.py  test_deterministic.py  test_dialect.py  test_dialect_mssql.py  test_dialect_mysql.py  test_dialect_pg.py  test_direct_dispatch.py  test_doctor.py  test_engine_heuristic.py  test_engine_spec.py  test_engine_statistical.py  test_engine_statistical_wiring.py  test_errors.py  test_fidelity.py  test_fk_sampling.py  test_geo.py  test_grammar.py  test_graph.py  test_graph_cycle_breaking.py  test_graph_cycles.py  test_heuristics.py  (+33 more)
tests/unit/privacy/: test_audit.py  test_enforcer.py  test_pii.py  test_redactor.py
tests/unit/test_docs/: test_mkdocs_site.py
tests/unit/test_migrate/: conftest.py  test_differ.py  test_models.py  test_snapshot.py  test_update_models.py  test_updater.py
tests/unit/test_migrate/test_parsers/: conftest.py  test_alembic.py  test_alembic_compare.py  test_alembic_discovery.py  test_alembic_edges.py  test_alembic_linearize.py  test_alembic_ops.py  (+15 more)
tests/unit/test_plugins/: conftest.py  test_adapters.py  test_cli_plugins.py  test_discovery.py  test_dispatch_fallback.py  test_errors.py  test_protocols.py  test_registry.py
tests/unit/test_report/: _fixtures.py  test_charts.py  test_context.py  test_erd.py  test_formatting.py  test_generator.py  test_preview.py  test_template.py
tests/unit/test_state/: test_db.py  test_models.py  test_writer.py
tests/unit/test_train/: test_allocator.py  test_cli_train_pipeline.py  test_cli_train_run.py  test_cli_unit.py  test_closure.py  test_exporter.py  test_extractor_helpers.py  test_extractor_unit.py  test_loader.py  test_manifest.py  test_mlx_trainer.py  test_models.py  test_plugin_registration.py  test_privacy.py  test_random_select.py  test_serializer.py  test_train_config.py  test_trainer.py
(+24 files in other folders)
