[project]
name = "dbsprout"
version = "0.1.4"
description = "CLI tool that reads database schemas and generates realistic seed data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Fernando Flores" }]
keywords = ["database", "seed-data", "schema", "cli", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "sqlglot>=25.0",
    "tomli>=2.0; python_version < '3.11'",
    "mimesis>=18.0",
    "faker>=33.0",
    "numpy>=1.26",
    "diskcache>=5.6",
    "pydbml>=1.0",
]

[project.urls]
Homepage = "https://github.com/dbsprout/dbsprout"
Repository = "https://github.com/dbsprout/dbsprout"
"Bug Tracker" = "https://github.com/dbsprout/dbsprout/issues"

[project.scripts]
dbsprout = "dbsprout.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "bandit[toml]>=1.8",
    "pre-commit>=4.0",
    "sqlalchemy>=2.0",
    "types-networkx>=3.0",
]
db = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
]
mssql = [
    "sqlalchemy>=2.0",
    "pyodbc>=5.0",
]
gen = [
    "mimesis>=18.0",
    "faker>=33.0",
    "numpy>=1.26",
]
llm = [
    "litellm>=1.0",
    "instructor>=1.0",
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]
cloud = [
    "litellm>=1.0",
    "instructor>=1.0",
]
privacy = [
    "presidio-analyzer>=2.0",
]
stats = [
    "scipy>=1.14",
    "scikit-learn>=1.5",
]
train-cuda = [
    "unsloth>=2024.0",
]
train-mlx = [
    "mlx>=0.20",
    "mlx-lm>=0.20",
]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
]
tui = [
    "textual>=1.0",
]
# Excludes train-cuda/train-mlx (platform-specific) and cloud (subset of llm)
all = [
    "dbsprout[db,gen,llm,stats,web,tui]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["dbsprout", "tests"]
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security, overlaps with bandit)
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "ERA",  # eradicate (commented-out code)
    "T20",  # flake8-print
    "PIE",  # flake8-pie
    "PL",   # pylint subset
]
ignore = [
    "S101",   # allow assert in tests
    "PLR2004", # magic value comparison (too noisy)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002", "T20"]
"dbsprout/cli/commands/*.py" = ["B008"]  # typer.Option() in function defaults is the standard pattern
"dbsprout/schema/parsers/*.py" = ["PLR0912", "PLR0915"]  # parser functions are inherently branchy
"dbsprout/spec/patterns.py" = ["E501"]  # pattern data declarations are naturally wide

[tool.ruff.lint.isort]
known-first-party = ["dbsprout"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ─── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ─── Bandit ────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B311"]  # B101: assert in tests; B311: random is fine for seed data generation

# ─── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
]

# ─── Coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["dbsprout"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
