[project]
name = "dbsprout"
version = "0.1.5"
description = "CLI tool that reads database schemas and generates realistic seed data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Fernando Flores" }]
keywords = ["database", "seed-data", "schema", "cli", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "sqlglot>=25.0",
    "tomli>=2.0; python_version < '3.11'",
    "mimesis>=18.0",
    "faker>=33.0",
    "numpy>=1.26",
    "diskcache>=5.6",
    "defusedxml>=0.7",
    "pydbml>=1.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/dbsprout/dbsprout"
Repository = "https://github.com/dbsprout/dbsprout"
"Bug Tracker" = "https://github.com/dbsprout/dbsprout/issues"

[project.scripts]
dbsprout = "dbsprout.cli.app:run"

[project.entry-points."dbsprout.parsers"]
ddl = "dbsprout.plugins.adapters:ddl_parser"
dbml = "dbsprout.plugins.adapters:dbml_parser"
mermaid = "dbsprout.plugins.adapters:mermaid_parser"
plantuml = "dbsprout.plugins.adapters:plantuml_parser"
prisma = "dbsprout.plugins.adapters:prisma_parser"

[project.entry-points."dbsprout.generators"]
heuristic = "dbsprout.generate.engines.heuristic:HeuristicEngine"
spec_driven = "dbsprout.generate.engines.spec_driven:SpecDrivenEngine"

[project.entry-points."dbsprout.outputs"]
sql = "dbsprout.output.sql_writer:SQLWriter"
csv = "dbsprout.output.csv_writer:CSVWriter"
json = "dbsprout.output.json_writer:JSONWriter"
jsonl = "dbsprout.output.json_writer:JSONWriter"
parquet = "dbsprout.output.parquet_writer:ParquetWriter"
pg_copy = "dbsprout.output.pg_copy:PgCopyWriter"
mysql_load_data = "dbsprout.output.mysql_load_data:MysqlLoadDataWriter"
sa_batch = "dbsprout.output.sa_batch:SaBatchWriter"

[project.entry-points."dbsprout.llm_providers"]
embedded = "dbsprout.spec.providers.embedded:EmbeddedProvider"
ollama = "dbsprout.spec.providers.ollama:OllamaProvider"
cloud = "dbsprout.spec.providers.cloud:CloudProvider"

[project.entry-points."dbsprout.migration_frameworks"]
alembic = "dbsprout.migrate.parsers.alembic:AlembicParser"
django = "dbsprout.migrate.parsers.django:DjangoMigrationParser"
flyway = "dbsprout.migrate.parsers.flyway:FlywayMigrationParser"
liquibase = "dbsprout.migrate.parsers.liquibase:LiquibaseMigrationParser"
prisma = "dbsprout.migrate.parsers.prisma:PrismaMigrationParser"

[project.entry-points."dbsprout.train_extractors"]
live_db = "dbsprout.train.extractor:SampleExtractor"

[project.entry-points."dbsprout.train_serializers"]
great = "dbsprout.train.serializer:DataPreparer"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "bandit[toml]>=1.8",
    "pre-commit>=4.0",
    "sqlalchemy>=2.0",
    "types-networkx>=3.0",
    "testcontainers[postgres,mysql]>=4.0",
]
db = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
]
mssql = [
    "sqlalchemy>=2.0",
    "pyodbc>=5.0",
]
pg = [
    "psycopg[binary]>=3.0",
]
gen = [
    "mimesis>=18.0",
    "faker>=33.0",
    "numpy>=1.26",
]
llm = [
    "litellm>=1.0",
    "instructor>=1.0",
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]
migrate = [
    "alembic>=1.12,<2.0",
]
cloud = [
    "litellm>=1.0",
    "instructor>=1.0",
]
privacy = [
    "presidio-analyzer>=2.0",
]
stats = [
    "scipy>=1.14",
    "scikit-learn>=1.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
train-cuda = [
    "unsloth>=2024.0",
]
train-mlx = [
    "mlx>=0.20",
    "mlx-lm>=0.20",
]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1.3",  # CVE-2024-22195
]
tui = [
    "textual>=1.0",
]
data = [
    "polars>=1.0",
]
train = [
    "polars>=1.0",
    "sqlalchemy>=2.0",
]
# Excludes train-cuda/train-mlx (platform-specific) and cloud (subset of llm)
all = [
    "dbsprout[db,pg,gen,llm,stats,data,web,tui,train]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["dbsprout", "tests"]
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security, overlaps with bandit)
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "ERA",  # eradicate (commented-out code)
    "T20",  # flake8-print
    "PIE",  # flake8-pie
    "PL",   # pylint subset
]
ignore = [
    "S101",   # allow assert in tests
    "PLR2004", # magic value comparison (too noisy)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002", "T20"]
"tests/**/fixtures/**/*.py" = ["S101", "ARG001", "ARG002", "T20", "E402", "ANN", "D"]  # fixture files mirror real-world layouts (e.g. Alembic revisions put metadata above imports)
"dbsprout/cli/commands/*.py" = ["B008"]  # typer.Option() in function defaults is the standard pattern
"dbsprout/schema/parsers/*.py" = ["PLR0912", "PLR0915"]  # parser functions are inherently branchy
"dbsprout/spec/patterns.py" = ["E501"]  # pattern data declarations are naturally wide

[tool.ruff.lint.isort]
known-first-party = ["dbsprout"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ─── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["polars", "polars.*", "alembic", "alembic.*", "psycopg", "psycopg.*", "unsloth", "unsloth.*", "trl", "trl.*", "datasets", "datasets.*", "torch", "torch.*", "mlx", "mlx.*", "mlx_lm", "mlx_lm.*", "litellm", "litellm.*", "instructor", "instructor.*", "llama_cpp", "llama_cpp.*", "huggingface_hub", "huggingface_hub.*", "peft", "peft.*", "transformers", "transformers.*", "scipy", "scipy.*", "presidio_analyzer", "presidio_analyzer.*", "presidio_anonymizer", "presidio_anonymizer.*", "opacus", "opacus.*"]
ignore_missing_imports = true

# ─── Bandit ────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B311"]  # B101: assert in tests; B311: random is fine for seed data generation

# ─── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
]

# ─── Coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["dbsprout"]
branch = true
omit = [
    # Optional-dependency modules — only active when extras are installed
    "dbsprout/output/parquet_writer.py",   # requires polars ([data] extra)
    "dbsprout/quality/fidelity.py",         # requires scipy  ([stats] extra)
    "dbsprout/quality/detection.py",        # requires sklearn ([stats] extra)
]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
